--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 <h1> peppa pig</h1>
 <p> animais felizes</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lGZOFDwnWrI?si=BaM_iuuRvPRdL9CX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>Kick buttowski</h1>
+<p>serie animada americana </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bO3a-DGDRO0?si=eJZTjiiCsju35b0r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>Bob esponja</h1>
+<p>desenho animado abaixo da água</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Dz9OoMW-DP4?si=5uWpTkqQxqLO74fj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>Masha e o urso</h1>
+<p>Uma menina enérgica e um urso que vira seu amigo</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rA8wjaHW2a8?si=-vSk7dYx9f_GAMED" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>Turma da mônica</h1>
+<p>Turma de amigos em dias alegres</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/85adN-WmTJ0?si=_lsD-IVL0GK6X_k7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>Chaves desenho</h1>
+<p>Vizinho que são amigos ou não?</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jWVaCzwXeqg?si=MRae7w84Euj45WXP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
 </html>
