--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 <header>
     desenhos animados
 </header>
+<section class="chamada">
+<div class="chamada-texto">
 <h1> peppa pig</h1>
 <p> animais felizes</p>
+</div>
+<div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lGZOFDwnWrI?si=BaM_iuuRvPRdL9CX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h1>Kick buttowski</h1>
+</div>
+</section>
+<section class="categoria">
+<h2>Desenho animado</h2>
+<div class="categoria-videos">
+    <h1>Kick buttowski</h1>
 <p>serie animada americana </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bO3a-DGDRO0?si=eJZTjiiCsju35b0r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h1>Bob esponja</h1>
@@ -27,7 +36,8 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/85adN-WmTJ0?si=_lsD-IVL0GK6X_k7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h1>Chaves desenho</h1>
 <p>Vizinho que são amigos ou não?</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jWVaCzwXeqg?si=MRae7w84Euj45WXP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jWVaCzwXeqg?si=MRae7w84Euj45WXP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></section>
+</div>
+</section>
 </body>
 </html>
