--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>desenho animado abaixo da água</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Dz9OoMW-DP4?si=5uWpTkqQxqLO74fj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h1>Masha e o urso</h1>
-<p>Uma menina enérgica e um urso que vira seu amigo</p>
+<p>Uma menina alegre e um urso que vira seu amigo</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rA8wjaHW2a8?si=-vSk7dYx9f_GAMED" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h1>Turma da mônica</h1>
 <p>Turma de amigos em dias alegres</p>
